{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 26,
  "lineage": "dbeaa706-e599-e089-2d02-719fdb81dec4",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:network-acl/acl-0b01d4844367427c6",
            "default_network_acl_id": "acl-0b01d4844367427c6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b01d4844367427c6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264261029",
            "subnet_ids": [
              "subnet-0190df162287a5dc5",
              "subnet-02f5a4d14e6bec90a",
              "subnet-04444b030d35011ae",
              "subnet-098cadf0ddcf8f750",
              "subnet-0ca577492bad2aaf0",
              "subnet-0d5784cba66388972"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "bhuang"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-062e72cf342896abd",
            "default_route_table_id": "rtb-062e72cf342896abd",
            "id": "rtb-062e72cf342896abd",
            "owner_id": "058264261029",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "bhuang"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:security-group/sg-09dd3cbc4d9edd5ba",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09dd3cbc4d9edd5ba",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264261029",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-default",
              "Owner": "bhuang"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0040e84d29c846509",
            "arn": "arn:aws:ec2:us-east-1:058264261029:elastic-ip/eipalloc-0040e84d29c846509",
            "domain": "vpc",
            "id": "eipalloc-0040e84d29c846509",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-238-66-114.compute-1.amazonaws.com",
            "public_ip": "34.238.66.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "bhuang"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:internet-gateway/igw-0026e3492acfd6667",
            "id": "igw-0026e3492acfd6667",
            "owner_id": "058264261029",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "bhuang"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0040e84d29c846509",
            "association_id": "eipassoc-04681645f895b5d22",
            "connectivity_type": "public",
            "id": "nat-0eca5ed57541041df",
            "network_interface_id": "eni-0ee411dbfe83fd549",
            "private_ip": "10.0.101.20",
            "public_ip": "34.238.66.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02f5a4d14e6bec90a",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-us-east-1a",
              "Owner": "bhuang"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062e4ebddd2c1cf671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eca5ed57541041df",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062e4ebddd2c1cf67",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0026e3492acfd6667",
            "id": "r-rtb-0b77d847aab6350341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b77d847aab635034",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-0505404bb78169d9a",
            "id": "rtb-0505404bb78169d9a",
            "owner_id": "058264261029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-db",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-db",
              "Owner": "bhuang"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-062e4ebddd2c1cf67",
            "id": "rtb-062e4ebddd2c1cf67",
            "owner_id": "058264261029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private",
              "Owner": "bhuang"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:route-table/rtb-0b77d847aab635034",
            "id": "rtb-0b77d847aab635034",
            "owner_id": "058264261029",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public",
              "Owner": "bhuang"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327e30eb2c87215a",
            "route_table_id": "rtb-0505404bb78169d9a",
            "subnet_id": "subnet-0d5784cba66388972"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f1935fb778b4f56",
            "route_table_id": "rtb-0505404bb78169d9a",
            "subnet_id": "subnet-0ca577492bad2aaf0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f91df8027077e53",
            "route_table_id": "rtb-062e4ebddd2c1cf67",
            "subnet_id": "subnet-04444b030d35011ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a88b03b4208306b",
            "route_table_id": "rtb-062e4ebddd2c1cf67",
            "subnet_id": "subnet-098cadf0ddcf8f750"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0690161f28f523684",
            "route_table_id": "rtb-0b77d847aab635034",
            "subnet_id": "subnet-02f5a4d14e6bec90a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019bfc3c01ddef7fe",
            "route_table_id": "rtb-0b77d847aab635034",
            "subnet_id": "subnet-0190df162287a5dc5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-0d5784cba66388972",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5784cba66388972",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1a",
              "Owner": "bhuang",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1a",
              "Owner": "bhuang",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-0ca577492bad2aaf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca577492bad2aaf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1b",
              "Owner": "bhuang",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-db-us-east-1b",
              "Owner": "bhuang",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-04444b030d35011ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04444b030d35011ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1a",
              "Owner": "bhuang",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1a",
              "Owner": "bhuang",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-098cadf0ddcf8f750",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098cadf0ddcf8f750",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1b",
              "Owner": "bhuang",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-private-us-east-1b",
              "Owner": "bhuang",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-02f5a4d14e6bec90a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f5a4d14e6bec90a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1a",
              "Owner": "bhuang",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1a",
              "Owner": "bhuang",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:subnet/subnet-0190df162287a5dc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0190df162287a5dc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1b",
              "Owner": "bhuang",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev-public-us-east-1b",
              "Owner": "bhuang",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-0ad6e1d98e556d3ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264261029:vpc/vpc-0ad6e1d98e556d3ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b01d4844367427c6",
            "default_route_table_id": "rtb-062e72cf342896abd",
            "default_security_group_id": "sg-09dd3cbc4d9edd5ba",
            "dhcp_options_id": "dopt-0419d1d31d59a4743",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad6e1d98e556d3ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062e72cf342896abd",
            "owner_id": "058264261029",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "bhuang"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "bhuang"
            }
          }
        }
      ]
    }
  ]
}